unpackaged/main/default/objects/pw_ccpro__TimeZone__c/pw_ccpro__TimeZone__c.object-meta.xml
<CustomObject>
    <description>A basic representation of IANA Time Zone information.  For more info see http://www.iana.org/time-zones</description>
    <label>Time Zone</label>
    <nameField>
        <label>Time Zone</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>