unpackaged/main/default/objects/pw_ccpro__TimeZone__c/fields/pw_ccpro__UtcOffset__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__UtcOffset__c</fullName>
    <inlineHelpText>This is the difference (in hours) from UTC on 1st Jan</inlineHelpText>
    <label>UTC Offset</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>