unpackaged/main/default/objects/pw_ccpro__TimeZone__c/fields/pw_ccpro__UtcOffsetMidYear__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__UtcOffsetMidYear__c</fullName>
    <inlineHelpText>The difference (in hours) from UTC as at 1st Jul.
Note that the UTC Mid Year offset is different from the UTC offset for zones where daylight saving time is observed</inlineHelpText>
    <label>UTC Offset Mid Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>