unpackaged/main/default/objects/pw_ccpro__TimeZone__c/listViews/pw_ccpro__All.listView-meta.xml
<ListView>
    <fullName>pw_ccpro__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>pw_ccpro__UtcOffset__c</columns>
    <columns>pw_ccpro__UtcOffsetMidYear__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>